# TaskManager

./: .env  Cargo.toml  README.md
migrations/2024-05-19-162953_create_tasks/: up.sql
migrations/2024-05-23-151500_create_tasks/: up.sql
src/: lib.rs  main.rs  schema.rs
src/adapters/: mod.rs  routes.rs
src/adapters/api/task/: mod.rs  task_controller.rs  task_payload.rs
src/adapters/shared/: app_confs.rs  mod.rs
src/application/: mod.rs
src/application/helpers/: error_handler.rs
src/application/repo_requesters/: abstract_request.rs  create_task_request.rs  delete_task_request.rs  get_task_request.rs  get_tasks_request.rs  mod.rs  update_task_request.rs
src/application/repositories/: mod.rs  task_abstract_repo.rs
src/dal/: db_connection.rs  db_mapper.rs  mod.rs  models.rs  schema.rs
src/dal/repositories/: db_repo_tasks.rs  mod.rs
src/domain/: mod.rs  task.rs
src/domain/task/: task.rs
src/infrastructure/: mod.rs
